# estimate-app

./: .gitignore  DEPLOY.md  MIGRATION_PLAN.md  README.md  docker-compose.yml  mise.toml  pyrightconfig.json
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  fly.toml  pyproject.toml  現状のプロンプト.md
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_tables.py  0002_add_api_usage.py  0003_billing_plans.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: estimate.py  health.py  plans.py  stripe_checkout.py  stripe_webhook.py  users.py
backend/app/core/: config.py  database.py
backend/app/models/: base.py  db.py  estimate.py
backend/app/services/: billing_plans.py  estimate_service.py  rate_limiter.py  stripe_sync.py
backend/app/services/ai/: agent.py
backend/tests/: test_health.py
docs/: stripe-setup.md
e2e/: package.json  playwright.config.ts  pnpm-lock.yaml
e2e/tests/: estimate.spec.ts
frontend/: .env.local.example  .gitignore  biome.json  package.json  pnpm-lock.yaml  postcss.config.mjs  wrangler.toml
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/pricing/: page.tsx
frontend/src/app/privacy/: page.tsx
frontend/src/lib/: api.ts  clerk-config.ts  store.ts  utils.ts
frontend/src/types/: estimate.ts
gas/: ping_server.js
worker/: package.json  pnpm-lock.yaml  pylock.toml  pyproject.toml  requirements.txt  tsconfig.json  wrangler.jsonc
worker/scripts/: set-secrets.sh
(+22 files in other folders)
