[project]
name = "estimate-backend"
version = "1.0.0"
description = "EstiMate バックエンド"
requires-python = ">=3.12"

dependencies = [
    "fastapi[standard]>=0.115.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.10.0",
    "httpx>=0.28.0",
    "python-jose[cryptography]>=3.3.0",
    "stripe>=11.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "ty>=0.0.1a6",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app"]

[tool.ruff.lint]
select = ["E","W","F","I","B","C4","UP","N","ANN"]
ignore = ["ANN101","ANN102","ANN401","E501","B008","ANN001","ANN201","ANN202","UP042"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# Pylance / Pyright: プロジェクトルートの .venv を解釈パスに含める（sqlalchemy 等の「解決できません」を防ぐ）
[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
include = ["app", "tests"]
